# scam-buddy

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  mypy.ini  pyproject.toml
server/: common.py
server/email/parse/: parse_email.py  utils.py
server/integrations/clamd/: __main__.py  common.py  query.py  setup.py
server/integrations/phishing_database/: download.py  query.py
